--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,17 +1,21 @@
-<p style="color: green"><%= notice %></p>
+<p id ="notice"><%= notice %></p>
 
-<h1>Friends</h1>
+
 <div id="friends">
 
-<table class="table table-striped table-bordered table-hover">
+<h1> List of friends </h1>
+
+<table class="table table-dark table-striped table-bordered">
 
 
+  <tbody>
   <% @friends.each do |friend| %>
     <%= render friend %>
     <p>
-      <%= link_to "Show this friend", friend %>
+      <%= link_to "Show this friend", friend , class: "btn btn-secondary"%>
   <% end %>
+<tbody>
   </table>
 </div>
 </table>
-<%= link_to "New friend", new_friend_path %>
+<%= link_to "New friend", new_friend_path ,class: "btn btn-secondary"%>
