--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -21,6 +21,12 @@
         <%= link_to 'Add Friend', new_friend_path, class: "nav-link" %>
 
         </li>
+        <li class="nav-item">
+        <%= link_to 'Articles', articles_path, class: "nav-link" %>
+            <li class="nav-item">
+        <%= link_to 'Sign In', new_friend_path, class: "nav-link" %>
+
+        </li>
       
       </ul>
       <form class="d-flex" role="search">
