Active Records Migrations

--- a/app/views/friends/_friend.html.erb
+++ b/app/views/friends/_friend.html.erb
@@ -6,10 +6,6 @@
     <%= friend.first_name %>
   </p>
 
-  <p>
-    <strong>String:</strong>
-    <%= friend.string %>
-  </p>
 
   <p>
     <strong>Last name:</strong>
@@ -26,9 +22,12 @@
     <%= friend.phone %>
   </p>
 
-  <p>
-    <strong>Twitter:</strong>
-    <%= friend.twitter %>
+ 
+
+<p>
+    <strong>Facebook</strong>
+    <%=  friend.facebook %>
   </p>
+  
 
 </div>
