--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -16,10 +16,6 @@
     <%= form.text_field :first_name %>
   </div>
 
-  <div>
-    <%= form.label :string, style: "display: block" %>
-    <%= form.text_field :string %>
-  </div>
 
   <div>
     <%= form.label :last_name, style: "display: block" %>
@@ -36,11 +32,11 @@
     <%= form.text_field :phone %>
   </div>
 
-  <div>
-    <%= form.label :twitter, style: "display: block" %>
-    <%= form.text_field :twitter %>
-  </div>
 
+  <div>
+    <%= form.label :facebook, style: "display: block" %>
+    <%= form.text_field :facebook %>
+  </div>
   <div>
     <%= form.submit %>
   </div>
