Active Records Callbacks, Associations

--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -37,6 +37,11 @@
     <%= form.label :facebook, style: "display: block" %>
     <%= form.text_field :facebook %>
   </div>
+
+    <div>
+    <%= form.label :friend_with_id, style: "display: block" %>
+    <%= form.text_field :friend_with_id %>
+  </div>
   <div>
     <%= form.submit %>
   </div>
