--- a/app/views/friends/_friend.html.erb
+++ b/app/views/friends/_friend.html.erb
@@ -28,6 +28,13 @@
     <strong>Facebook</strong>
     <%=  friend.facebook %>
   </p>
+
+<p>
+    <strong>Friends With</strong>
+    <%=  friend.friend_with_id %>
+  </p>
+
+  
   
 
 </div>
