--- a/app/views/friends/_friend.html.erb
+++ b/app/views/friends/_friend.html.erb
@@ -12,6 +12,11 @@
     <%= friend.last_name %>
   </p>
 
+   <p>
+    <strong>City:</strong>
+    <%= friend.city %>
+  </p>
+
   <p>
     <strong>Email:</strong>
     <%= friend.email %>
