--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: friend) do |form| %>
+<%= form_with(model: friend, builder: MyFormBuilder) do |form| %>
   <% if friend.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(friend.errors.count, "error") %> prohibited this friend from being saved:</h2>
@@ -11,6 +11,7 @@
     </div>
   <% end %>
 
+
   <div>
     <%= form.label :first_name, style: "display: block" %>
     <%= form.text_field :first_name %>
@@ -21,8 +22,14 @@
     <%= form.label :last_name, style: "display: block" %>
     <%= form.text_field :last_name %>
   </div>
-
-  <div>
+ <%= form.label "city" %>
+<%= form.select :city,
+      {
+        "Europe" => [ ["Berlin", "BE"], ["Madrid", "MD"] ],
+        "North America" => [ ["Chicago", "CHI"] ],
+      },
+      selected: "CHI" %>
+   <div>
     <%= form.label :email, style: "display: block" %>
     <%= form.text_field :email %>
   </div>
@@ -35,10 +42,15 @@
 
   <div>
     <%= form.label :facebook, style: "display: block" %>
-    <%= form.text_field :facebook %>
+   <%= form.label :facebook_yes, "YES"%>
+    <%= form.radio_button :facebook , "yes" %>
+    <%= form.label :facebook_no, "NO"%>
+     <%= form.radio_button :facebook , "no" %>
   </div>
 
+
     <div>
+
     <%= form.label :friend_with_id, style: "display: block" %>
     <%= form.text_field :friend_with_id %>
   </div>
@@ -46,3 +58,5 @@
     <%= form.submit %>
   </div>
 <% end %>
+
+
