--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -52,7 +52,7 @@
     <div>
 
     <%= form.label :friend_with_id, style: "display: block" %>
-    <%= form.text_field :friend_with_id %>
+    <%= form.text_field :friend_with %>
   </div>
   <div>
     <%= form.submit %>
