--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -5,6 +5,6 @@
 <div>
   <%= link_to "Edit this friend", edit_friend_path(@friend) %> |
   <%= link_to "Back to friends", friends_path %>
-
+<%= button_to "View File", @friend, method: :downloadpdf %>
   <%= button_to "Destroy this friend", @friend, method: :delete %>
 </div>
