--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,39 +1,51 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+
   <div class="container-fluid">
   <%= link_to 'Blog', root_path, class: "navbar-brand" %>
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        
-        <li class="nav-item">
-        <%= link_to 'About Us', home_about_path, class: "nav-link" %>
+        <% if account_signed_in? %>
+         <li class="nav-item"  style="color:#fff">
+        <%= link_to 'Sign Out',  destroy_account_session_path, data: { turbo_method: :delete} , class: "nav-link" %>
+        </li>
+
+        <%else%>
+          <li class="nav-item" style="color:#fff">
+        <%= link_to 'Sign Up', new_account_registration_path, class: "nav-link" %>
+        </li>
+
+        <%end%>
 
 
+          <li class="nav-item"  style="color:#fff">
+        <%= link_to 'Sign In', new_account_session_path  , class: "nav-link" %>
         </li>
 
 
-        <li class="nav-item">
+         
+
+
+        <li class="nav-item"  style="color:#fff">
+        <%= link_to 'About Us', home_about_path, class: "nav-link" %>
+        </li>
+
+
+        <li class="nav-item"  style="color:#fff">
         <%= link_to 'Show Friends', friends_path, class: "nav-link" %>
             <li class="nav-item">
         <%= link_to 'Add Friend', new_friend_path, class: "nav-link" %>
 
         </li>
-        <li class="nav-item">
+        <li class="nav-item"  style="color:#fff">
         <%= link_to 'Articles', articles_path, class: "nav-link" %>
             <li class="nav-item">
         <%= link_to 'Sign In', new_friend_path, class: "nav-link" %>
 
         </li>
-      
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
+    
   </div>
 </nav>
 
