--- a/app/views/friends/_friend.html.erb
+++ b/app/views/friends/_friend.html.erb
@@ -35,11 +35,8 @@
   </p>
 
 <p>
-    <strong>Friends With</strong>
-    <%=  friend.friend_with_id %>
+    <strong>User ID</strong>
+    <%=  friend.account_id %>
   </p>
-
-  
-  
 
 </div>
