--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,8 +21,12 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+  
+
   <div class="actions">
     <%= f.submit "Sign up" %>
+    <%= f.file_field :image, direct_upload: false %>
+
   </div>
 <% end %>
 
