--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,7 +25,7 @@
 
   <div class="actions">
     <%= f.submit "Sign up" %>
-    <%= f.file_field :image, direct_upload: false %>
+    <%= f.file_field :avatar, direct_upload: false %>
 
   </div>
 <% end %>
